update some informations

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,17 @@
 ---
 name: Sajad Sohrabi
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+occupation: Senior Software Engineer
+company:
+email: sajjad.sohrabi2@gmail.com
+# twitter: https://twitter.com/Twitter
+linkedin: https://www.linkedin.com/in/sajadsohrabi
+github: https://github.com/geek-sajjad
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+🧑‍💻 About Me
+I'm Sajad Sohrabi, a backend-focused senior software engineer with deep experience in building scalable systems using **Node.js** and **Go**. Over the years, I’ve worked on complex systems including crypto trading platforms and event-driven microservices. I enjoy solving performance challenges, refactoring legacy code, and bringing clarity to distributed systems through clean architecture and solid documentation.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+This site is my digital workspace — part resume, part blog — where I share insights from the backend trenches, personal projects, system design ideas, and thoughts on software engineering as a craft.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+When I'm not coding, I'm probably learning something low-level about computers or exploring how technology can empower people.
